# data-generator

./: .editorconfig  pyproject.toml  test.csv
src/: app.py
