[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = "Generate fake data for testing use"
authors = ["cuddebtj <cuddebtj@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.15"
faker = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
fix = true
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"__init__.py" = ["E402"]
